# find_duplicates

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci_linux.yml
find_duplicates_gui/: Cargo.toml
find_duplicates_gui/src/: action_name.rs  application.rs  duplicates_list.rs  errors.rs  exclusion.rs  find_duplicates.rs  format_number.rs  gtk_prelude.rs  main.rs  main_window.rs  options.rs  path_choose.rs  phantom_data_weak.rs  string_list.rs  user_interaction.rs  utils.rs
find_duplicates_gui/src/widgets/: go_button.rs  menu_builder.rs  mod.rs
newtype_gobject/: Cargo.toml
newtype_gobject/src/: dynamic_property.rs  lib.rs  object_data.rs  weak_ref.rs
newtype_gobject_derive/: Cargo.toml
newtype_gobject_derive/src/: downgrade_struct.rs  lib.rs
src/: application.rs  duplicates_list.rs  options.rs  string_list.rs
src/widgets/: menu_builder.rs  mod.rs
supplemental_macros/: Cargo.toml
supplemental_macros/src/: action_map.rs  downgrade_enum.rs  lib.rs
