[package]
name = "find_duplicates_gui"
version = "0.1.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
glib = "0.10"
gio = "0.9"
gdk = "0.13"
gtk = { version = "0.9", features = ["v3_22"] }

derive_builder = "0.9"
glob = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
hex = "0.4"

sha2 = "0.9"
generic-array = "0.14"
lazy_static = "1"

newtype_gobject_derive = { path = "../newtype_gobject_derive" }
