[package]
name = "find_duplicates_gui"
version = "0.1.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.16" }

glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
hex = "0.4"
humansize = "2"

sha2 = "0.10"
lazy_static = "1"

supplemental_macros = { path = "../supplemental_macros" }
awesome-glib = "0.1.1"
